Changelog
=========

0.5 (2012-01-30)
----------------

- ``cromlech.dawnlight`` now provides a custom `ViewLookup` components that
  is more flexible : trying to publish a view directly now works without the
  need of an extra "default view".


0.4.1 (2012-01-27)
------------------

- Unicode paths were failing due to the transformation of the request path,
  through `unquote` and then the transformation to unicode. This has been
  fixed and tested.


0.4 (2012-01-24)
----------------

- Error handling is now implemented as a decorator for the `publish` method.
  This allows more flexibility in the catching and rendering of errors.
  A base adapter is provided, adapting an exception to `IHTTPResponse`,
  using the query of an `IHTTPRenderer`.

  The adapter from `IHTTPRenderer` to `IHTTPResponse` has been modified
  accordingly and heavily commented as it was judged a bit cryptic by
  the newcomers. 


0.3b4 (2012-01-11)
------------------

- The lookup wrappers have now been modified to only be used on the lookup
  function passed to the `ViewLookup` component.


0.3b3 (2012-01-11)
------------------

- We no longer inherit from `ViewLookup` to provide a base lookup method.
  This method can be simply passed to the constructor. 2 decorator-like
  functions have been added in `utils` allowing to wrap a basic lookup
  function to provide locatisation and/or protection.

  The protection wrapper is only available if the `zope.security` package
  is present as it uses the `ProxyFactory` mechanism.

- Adapted the code and tests to the latest interfaces split made in
  `cromlech.io` and `cromlech.browser`.


0.3b2 (2011-11-23)
------------------

- Now only attributes declared thanks to `traversable` directive are
  traversable ! This help keeping things under control.

  Note that it does not work like in `Grok` : it is a ONCE directive
  either you inherit it or you re-declare all attributes.


0.3b1 (2011-11-04)
------------------
